# vehicle_control

./: .gitignore  CMakeLists.txt  config.json  package.xml  setup.py  vehicle_control_main.py
launch/: vehicle_control.launch
scripts/: get_lanes_images.py  images_to_labels.py  masks_to_labels.py  remove_redundant.py  segmented_to_masks.py
scripts/lanes_training/: config.json  lanes_labeling.py  lanes_trainer.py
src/: __init__.py  cityscape_dataset.py  dataset_creator.py  image_segmenter.py  input_data_adapter.py  output_data_adapter.py  vehicle_control_node.py  vehicle_control_node_factory.py  vehicle_control_node_trainer.py
src/criterions/: boundary_loss.py  iou_loss.py
src/models/: __init__.py  unet.py
src/utills/: __init__.py  logger.py  metrics.py
tmp/: run_carla_server.sh  run_vehicle_control.sh
